# FORGE

./: .gitignore  DOCS.md  HANDOFF.md  README.md
.claude/: settings.local.json
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/api/: benchmarks.py  inference.py  models.py  system.py
backend/app/services/: gpu_info.py  model_registry.py  vllm_runner.py
backend/app/services/bench/: __init__.py  arc.py  fc.py  history.py  loader.py  manager.py  mcq.py  mmlu.py  registry.py  tool_calling.py
backend/data/benchmarks/: arc_easy.jsonl  bfcl_simple.jsonl
backend/forge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: build_arc_easy.py  build_bfcl_simple.py  build_mmlu.py
backend/slurm/: start_backend.sbatch
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/benchmark/: page.tsx
frontend/app/benchmark/compare/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/models/: page.tsx
frontend/components/: Nav.tsx
frontend/lib/: api.ts  types.ts
